# LeanRAG

./: .gitignore  Dockerfile.mysql  MYSQL_DOCKER_README.md  __init__.py  build_graph.py  config.yaml  database_utils.py  docker-compose.yml  file_chunk.py  install-full.sh  install.sh  mysql-docker.sh  pyproject.toml  query_graph.py  requirements.txt  test_docker_setup.sh
CommonKG/: corpus.py  create_kg.py  deal_triple.py  llm_infer.py  triple.py
CommonKG/config/: create_kg_conf_example.yaml  create_kg_conf_test.yaml  create_kg_conf_test_small.yaml  test_entities_small.txt
GraphExtraction/: deal_triple.py
datasets/mix/: mix_chunk.jsonl  test_corpus.jsonl
datasets/mix/mix_chunk/: all_entities.json  all_entities_mix_chunk.txt  community.json  entity.jsonl  generate_relations.json  match_words_mix_chunk.jsonl  milvus_demo.db  new_triples_mix_chunk.jsonl  new_triples_mix_chunk_descriptions.jsonl  next_layer_entities_mix_chunk.txt  relation.jsonl
mysql-init/: 01-init.sql
tools/: utils.py
